# bi-automatic-reporting

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  PLAN.md  PLAN_TASK9.md  README.md  business_analysis_report_template.md  docker-compose.yml  nginx-location-block.conf  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py
app/analysis/: agents.py
app/api/: routes.py
app/email/: service.py
app/email/providers/: __init__.py  base.py  sendgrid_provider.py  smtp_provider.py
app/llm/: client.py
app/models/: bi.py
app/orchestrator/: bi_pipeline.py  database.py  job_store.py  market_research.py
app/report/: generator.py
app/scraper/: engine.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: BIPage.tsx  MarketResearchPage.tsx
frontend/src/types/: api.ts
tests/: conftest.py  repro_thread_loop.py  smoke_test.py  test_llm_client.py  test_routes.py
